renamed some variables, made changes to histogram sliders, added onload for image

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 ## Basic Detector Setup ##
-Height: 1550
-Width: 1032
+HeightPxDet: 1550
+WidthPxDet: 1032
 CmPerPx: 0.0099
 
 ## Raw Image Size ##
@@ -16,6 +16,9 @@ GapMaxFrac: 1.2
 Nmass: 1.0
 FilterSteps: 3
 MaxTheta: 5.0
+
+## Configuration Variables for Compensation ##
+Tmin: 0.5
 
 ## Configuration Variables for Scales ##
 BorderPx: 2
