added Tedge, moved several config variables to file instead of html, changed some variable names

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+## Geometry ##
+SrcHeight: 65.0
+CoreHeight: 0.5
+Motion: 12.5
+    
 ## Basic Detector Setup ##
 HeightPxDet: 1550
 WidthPxDet: 1032
@@ -8,6 +13,11 @@ Bits: 14
 
 ## Setup for histogram ##
 Nbins: 256
+HeightPxHist: 600
+WidthPxHist: 800
+R: 66
+G: 134
+B: 244
 
 ## Configuration Variables for CoreAxis ##
 ThreshFrac: 0.9
@@ -19,6 +29,7 @@ MaxTheta: 5.0
 
 ## Configuration Variables for Compensation ##
 Tmin: 0.5
+Tedge: 0.5
 
 ## Configuration Variables for Scales ##
 BorderPx: 2
