--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,1 @@
-{
-"SrcHeight": 65.0,
-"CoreHeight": 0.5,
-"Motion": 12.5,
-"HeightPxDet": 1550,
-"WidthPxDet": 1032,
-"CmPerPx": 0.0099,
-"Bits": 14,
-"Nbins": 256,
-"HeightPxHist": 600,
-"WidthPxHist": 800,
-"R": 66,
-"G": 134,
-"B": 244,
-"ThreshFrac": 0.9,
-"GapMinFrac": 0.7,
-"GapMaxFrac": 1.2,
-"Nmass": 1.0,
-"FilterSteps": 3,
-"MaxTheta": 5.0,
-"Tmin": 0.5,
-"Tedge": 0.5,
-"BorderPx": 2,
-"ScaleWidth": 0.2,
-"RoiWidth": 0.1
-}
+{"SrcHeight":65,"CoreHeight":0.4,"Motion":12.5,"HeightPxDet":1550,"WidthPxDet":1032,"CmPerPx":0.0099,"Bits":14,"Nbins":256,"HeightPxHist":600,"WidthPxHist":800,"R":66,"G":134,"B":244,"ThreshFrac":0.9,"GapMinFrac":0.7,"GapMaxFrac":1.2,"Nmass":1,"FilterSteps":3,"MaxTheta":5,"Tmin":0.5,"Tedge":0.5,"BorderPx":2,"ScaleWidth":0.2,"RoiWidth":0.1}
